--- a/index.html
+++ b/index.html
@@ -2,36 +2,13 @@
 <html>
 <head> 
     <title>Website Najmi Nurul</title>
+    <link rel="stylesheet" href="style.css">
 <style>
-body {background-color:#ffe8f6}
-table {
-  font-family: 'Lucida Bright';
-  border-collapse: collapse;
-  width: 65%;
-}
-
-td, th {
-  border: 1px solid #6e2f52;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(odd) {
-  background-color: #dba7b5;
-}
-
-p {
-  font-family: 'Lucida Bright';
-  text-align: justify;
-  width: 65%;
-
-}
-</style>
 </head>
 <body>
 <center>
-<h1 style="font-family: 'Lucida Bright'; color:#301324">Website Kedua Najmi</h1>
-<h2 style="font-family: 'Lucida Sans Unicode'; color:#6e2f52">Profil</h2>
+<h1>Website Kedua Najmi</h1>
+<h2>Profil</h2>
 <img src="najmi n.jpeg"  width="240" height="320" alt="foto-najmi">
 <table>
     <tr>
@@ -78,7 +55,7 @@ p {
       <td>Pinterest: <a href="https://www.pinterest.com/aestronauts">@aestronauts</a></td>
     </tr>
 </table>
-<h2 style="font-family: 'Lucida Sans Unicode'; color:#6e2f52">Pengalaman Pembelajaran Jarak Jauh</h2>
+<h2>Pengalaman Pembelajaran Jarak Jauh</h2>
 <p>
 Pada akhir tahun 2019, Wabah virus corona (COVID-19) mulai menghantui sejumlah negara di dunia. 
 Pada awal bulan Maret tahun 2020, Indonesia mengonfirmasi kasus COVID-19 yang mulai masuk ke tanah air.
