--- a/index.html
+++ b/index.html
@@ -64,45 +64,33 @@
 <div class="center">
     <h2>Pengalaman Pembelajaran Jarak Jauh</h2>
 </div>
-<div class="center">    
+<div>  
 <p>
 Pada akhir tahun 2019, Wabah virus corona (COVID-19) mulai menghantui sejumlah negara di dunia. 
 Pada awal bulan Maret tahun 2020, Indonesia mengonfirmasi kasus COVID-19 yang mulai masuk ke tanah air.
 Sehingga pada pertengahan bulan Maret, Indonesia mulai melakukan Pembelajaran Jarak Jauh (PJJ) demi mengurangi korban terjangkit. 
 Tak terkecuali dengan sekolah saya.
-</p>
-</div>
-<div class="center">    
 <p>    
 Awal PJJ, saya merasa senang karena dapat belajar dengan lebih santai. 
 Saya bisa belajar sambil makan, minum, mendengarkan lagu, bahkan sambil rebahan pun bisa.
 Namun, tak jarang saya merasakan kesulitan karena belajar sendiri.
 Saya tidak dapat bertanya dan berdiskusi langsung dengan guru atau teman untuk materi yang saya kurang pahami.
 Saya harus berusaha lebih keras untuk memahami materi tersebut.
-</p>
-</div>
-<div class="center">    
 <p>
 Setelah satu tahun lebih melakukan PJJ, saya mulai merasa lelah.
 Saya capek dengan jadwal <i>meeting</i> atau pertemuan <i>online</i> yang terkadang dilaksanakan tiga kali dalam sehari.
 Atau hanya satu <i>meeting</i> namun dilaksanakan selama tiga jam, yang membuat badan saya pegal.
 Jujur saja, saya sempat sakit pinggang selama sebulan karena jadwal yang seperti itu.
-Saya juga sempat kehilangan <i>mood</i> belajar sehingga saya tertinggal banyak materi dan nilai saya pun turun.   
-</p>
-</div>
-<div class="center">    
+Saya juga sempat kehilangan <i>mood</i> belajar sehingga saya tertinggal banyak materi dan nilai saya pun turun.    
 <p>
 Untungnya setelah satu tahun lebih, ada kabar baik bahwa sekolah saya akan mulai melakukan pembelajaran seperti biasa.
 Meskipun hanya untuk pembelajaran praktik, namun tetap saja saya agak merasa senang karena akhirnya saya dapat bertemu teman-teman.
 Saya juga dapat lebih memahami berbagai macam praktikum yang selama ini hanya dapat saya lihat lewat video.
 Dan yang paling utama, akhirnya uang jajan saya kembali, hehe.
-</p>
-</div>
-<div class="center">    
 <p>    
 Sekian sedikit cerita mengenai pengalaman PJJ saya.
 Sampai bertemu di website selanjutnya!
 </p>
-</div>    
+</div>  
 </body>
 </html>
