--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="center">
+<div class="sticky">
     <h1>Website Kedua Najmi</h1>
 </div>
 <div class="center">
