--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Profil</h2>
 </div>
 <div class="center">
-    <img src="najmi n.jpeg"  width="240" height="320" alt="foto-najmi">
+    <img src="najmi n.jpeg"  width="240" height="320" alt="foto-najmi" bottom=20px>
 </div>
 <div class="center">    
     <table>
