--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
+          
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#">Home</a>
+        </li> 
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#Isi" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Isi
@@ -26,9 +31,6 @@
             <li><a class="dropdown-item" href="#">Profil</a></li>
             <li><a class="dropdown-item" href="#">Pengalaman PJJ</a></li>
           </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#">Pricing</a>
         </li>
       </ul>
     </div>
