--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 </head>
-<body>
-    <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-4">
-    <h5 class="text-white h4">Collapsed content</h5>
-    <span class="text-muted">Toggleable via the navbar brand.</span>
-    </div>
-    </div>
-    <nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    </div>
+<body id="page-top">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top" id="mainNav">
+        <div class="container">
+        <a class="navbar-brand" href="#">Website Najmi</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+            <a class="nav-link js-scroll-trigger" href="home.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link js-scroll-trigger" href="profile.html">Profile</a>
+          </div>
+        </div>
+        </div>
     </nav>
-<div class="sticky">
+
     <h1>Website Kedua Najmi</h1>
 </div>
 <div class="center">
