--- a/index.html
+++ b/index.html
@@ -25,91 +25,13 @@
         </div>
     </nav>
 
-    <h1>Website Kedua Najmi</h1>
-</div>
-<div class="center">
-    <h2>Profil</h2>
-</div>
-<div class="center">
-    <img src="najmi n.jpeg"  width="240" height="320" alt="foto-najmi">
-</div>
-<div class="center">    
-    <table>
-    <tr>
-        <th>Nama Lengkap:</th>
-        <td>Najmi Nurul Hayya Anjainah</td>
-    </tr>
-    <tr>
-        <th>Nama Panggilan:</th>
-        <td>Najmi</td>
-    </tr>
-    <tr>
-        <th>Tempat, Tanggal Lahir:</th>
-        <td>Jakarta, 16 Juli 2004</td>
-    </tr>
-    <tr>
-        <th>Jenis Kelamin:</th>
-        <td>Perempuan</td>
-    </tr>
-    <tr>
-        <th>Agama:</th>
-        <td>Islam</td>
-    </tr>
-    <tr>
-        <th>Sekolah:</th>
-        <td>SMK - SMAK Bogor</td>
-    </tr>
-    <tr>
-        <th>NIS:</th>
-        <td>19.65.09306</td>
-    </tr>
-    <tr>
-        <th>Kelas:</th>
-        <td>XI.9</td>
-    </tr>
-    <tr>
-        <th>Hobi:</th>
-        <td>Menggambar dan Membaca</td>
-    </tr>
-    <tr>
-      <th rowspan="2">Media Sosial:</th>
-      <td>Instagram: <a href="https://www.instagram.com/najminrlhaa">@najminrlhaa</a></td>
-    </tr>
-    <tr>
-      <td>Pinterest: <a href="https://www.pinterest.com/aestronauts">@aestronauts</a></td>
-    </tr>
-    </table>
-</div>
-<div class="center">
-    <h2>Pengalaman Pembelajaran Jarak Jauh</h2>
-</div>
-<div>  
-<p>
-Pada akhir tahun 2019, Wabah virus corona (COVID-19) mulai menghantui sejumlah negara di dunia. 
-Pada awal bulan Maret tahun 2020, Indonesia mengonfirmasi kasus COVID-19 yang mulai masuk ke tanah air.
-Sehingga pada pertengahan bulan Maret, Indonesia mulai melakukan Pembelajaran Jarak Jauh (PJJ) demi mengurangi korban terjangkit. 
-Tak terkecuali dengan sekolah saya.
-<p>    
-Awal PJJ, saya merasa senang karena dapat belajar dengan lebih santai. 
-Saya bisa belajar sambil makan, minum, mendengarkan lagu, bahkan sambil rebahan pun bisa.
-Namun, tak jarang saya merasakan kesulitan karena belajar sendiri.
-Saya tidak dapat bertanya dan berdiskusi langsung dengan guru atau teman untuk materi yang saya kurang pahami.
-Saya harus berusaha lebih keras untuk memahami materi tersebut.
-<p>
-Setelah satu tahun lebih melakukan PJJ, saya mulai merasa lelah.
-Saya capek dengan jadwal <i>meeting</i> atau pertemuan <i>online</i> yang terkadang dilaksanakan tiga kali dalam sehari.
-Atau hanya satu <i>meeting</i> namun dilaksanakan selama tiga jam, yang membuat badan saya pegal.
-Jujur saja, saya sempat sakit pinggang selama sebulan karena jadwal yang seperti itu.
-Saya juga sempat kehilangan <i>mood</i> belajar sehingga saya tertinggal banyak materi dan nilai saya pun turun.    
-<p>
-Untungnya setelah satu tahun lebih, ada kabar baik bahwa sekolah saya akan mulai melakukan pembelajaran seperti biasa.
-Meskipun hanya untuk pembelajaran praktik, namun tetap saja saya agak merasa senang karena akhirnya saya dapat bertemu teman-teman.
-Saya juga dapat lebih memahami berbagai macam praktikum yang selama ini hanya dapat saya lihat lewat video.
-Dan yang paling utama, akhirnya uang jajan saya kembali, hehe.
-<p>    
-Sekian sedikit cerita mengenai pengalaman PJJ saya.
-Sampai bertemu di website selanjutnya!
-</p>
-</div>  
-</body>
-</html>
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">Hi! Najmi's here!</h1>
+            <hr class="my-4">
+            <p>Feel free to explore! <3 </p>
+            <a class="btn btn-primary btn-lg" href="https://najminurul.github.io/" role="button">let's go</a>
+        </div>
+    </div>
+    </body>
+    </html>
