--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-link js-scroll-trigger" href="home.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link js-scroll-trigger" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-link js-scroll-trigger" href="profile.html">Profile</a>
           </div>
         </div>
