--- a/index.html
+++ b/index.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head> 
     <title>Website Najmi Nurul</title>
     <link rel="stylesheet" href="style.css">
 
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 </head>
 <body id="page-top">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top" id="mainNav">
-        <div class="container">
-        <a class="navbar-brand" href="#">Website Najmi</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
-            <a class="nav-link js-scroll-trigger" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link js-scroll-trigger" href="profile.html">Profile</a>
-          </div>
-        </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top" id="mainNav">
+    <div class="container">
+    <a class="navbar-brand text-white" href="#">Najmi Nurul</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+        <a class="nav-link text-white" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+        <a class="nav-link text-white" href="profile.html">Profile</a> <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+        <a class="nav-link text-white" href="fotogaleri.html">Gallery</a> <span class="sr-only">(current)</span></a>
+        </li>
+        </ul>
+    </div>
+    </div>
+  </nav>
 
     <div class="jumbotron">
         <div class="container">
             <h1 class="display-4">Hi! Najmi's here!</h1>
             <hr class="my-4">
-            <p>Feel free to explore! <3 </p>
+            <h4>Feel free to explore! <3 </h4>
             <a class="btn btn-primary btn-lg" href="https://najminurul.github.io/" role="button">let's go</a>
         </div>
     </div>
-    </body>
-    </html>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+</body>
+</html>
