--- a/profile.html
+++ b/profile.html
@@ -78,7 +78,7 @@
        
    <div class="col-lg-6">
     <h2>Hobi</h2> 
-      <p><i class="fas fa-paint-brush"></i> Menggambar digital</p>
+      <p><i class="fas fa-paint-brush"></i> Digital painting</p>
       <p><i class="fas fa-mobile-alt"></i> Membaca Webtoon</p>
       <p><i class="fas fa-tv"></i> Menonton Drama Korea dan Anime</p>
    </div>
